# NASA-breakup-model-cpp

./: CMakeLists.txt  README.md
.github/workflows/: ctest.yml
cmake/: gtest.cmake  spdlog.cmake  yaml.cmake
example-config/: config.yaml  config_1000_10.yaml  config_bess2.yaml  config_fengyun-1c.yaml  config_iridium.yaml  config_iridium_cosmos.yaml  config_iridium_cosmos2.yaml  config_landsat1.yaml  config_landsat2.yaml  config_landsat3.yaml  config_longmarch4.yaml  config_nimbus4.yaml  config_nimbus6.yaml  config_ops7613.yaml  data.yaml  data_1000_10.yaml  data_bess2.yaml  data_explosion.yaml  data_fengyun-1c.yaml  data_iridium_cosmos2.yaml  iridium_cosmos_tle.txt
src/: main.cpp
src/breakupModel/input/: CSVReader.h  DataSource.h  InputConfigurationSource.h  OutputConfigurationSource.h  RuntimeInputSource.cpp  RuntimeInputSource.h  TLEReader.cpp  TLEReader.h  TLESatcatDataReader.cpp  TLESatcatDataReader.h  (+4 more)
test/: CMakeLists.txt
test/input/: CSVReaderTest.cpp  TLEReaderTest.cpp  TLESatcatDataReaderTest.cpp  YAMLConfigurationReaderTest.cpp  YAMLDataReaderTest.cpp
test/model/: OrbitalElementsTest.cpp  SatelliteBuilderTest.cpp  SatelliteTest.cpp
test/output/: CSVPatternWriterTest.cpp  CSVWriterTest.cpp  VTKWriterTest.cpp
test/resources/: CSVReaderTest.csv  SatcatReaderTest01.csv  SatcatReaderTest02.csv  TLEReaderTest02.txt  TLEReaderTest03.txt  TLEReaderTest04.txt  TLESatcatReaderTest01.txt  TLESatcatReaderTest02.txt  TLESatcatReaderTest03.txt  VTKWriterTest.vtu  YamlConfigurationReaderTest01.yaml  YamlConfigurationReaderTest02.yaml  YamlConfigurationReaderTest03.yaml  YamlConfigurationReaderTest04.yaml  YamlDataReaderTest01.yaml  YamlDataReaderTest02.yaml  YamlDataReaderTest03.yaml  YamlDataReaderTest04.yaml
test/simulation/: BreakupBuilderTest.cpp  CollisionTest.cpp  ExplosionTest.cpp  NonCatastrophicCollisionTest.cpp
test/util/: UtilityFunctionsTest.cpp  UtilityKeplerTest.cpp
(+29 files in other folders)
